--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600|Muli:900,800,700" rel="stylesheet" type="text/css">
+  <!-- <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600|Muli:900,800,700" rel="stylesheet" type="text/css"> -->
   
-
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -27,7 +26,12 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/html2canvas.min.js"></script>
+  <script type="text/javascript" src="js/dom-to-image.js"></script>
+  
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="js/FileSaver.js"></script>
+
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -39,28 +43,35 @@
   <div id="fb-root"></div>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="twelve columns" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+  <!-- <div class="container"> -->
+    <div class="row" id="page">
+      <div class="twelve columns">
+        <h4>AVATAR</h4>
+        <p>Crea tu avatar</p>
         <!-- <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div> -->
         <fb:login-button scope="public_profile,email, publish_actions" onlogin="checkLoginState();" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-use-continue-as="true"></fb:login-button>
-
-        <div id="avatar">
-          <div id="text">
-            <div id="first"></div>
-            <!-- <div id="last"></div> -->
-            <div id="last_c"></div>
-            <div id="year"></div>
+        <div id="img-container">
+          <div id="avatar">
+            <div id="text">
+              <div id="first"></div>
+              <!-- <div id="last"></div> -->
+              <div id="last_c"></div>
+              <div id="year"></div>
+            </div>
           </div>
         </div>
+        <div class="correct"></div>
+        <div class="correction">
+          <input type="text" name="first_name" id="fname_input" placeholder="Nombre">
+          <input type="text" name="last_name" id="lname_input" placeholder="Apellido">
+          <div class="button" onclick="newAvatar(); return false;">Corregir</button></div>
+        </div>
 
-        <canvas id="imgexport"></canvas>
+        <div id="container-canvas"></div>
 
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
